--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ Body
 body {
   background-color: #ffffff;
   font-family: 'PT Sans Narrow', sans-serif;
-  font-size: 20px;
+  font-size: 16px;
   font-weight: 300;
   line-height: 1.6;
   color: #4a4a4a;
@@ -356,6 +356,16 @@ Medium devices (640px and larger)
     float: left;
     padding: 10px;
   }
+
+  .column_1 {
+    background: #4A84BE;
+    text-align: center;
+    padding: 30px 80px;
+  }
+
+  .column_2 {
+    padding-left: 30px;
+  }
 }
 
 /* ==============================
@@ -387,6 +397,16 @@ Large devices (1024px or larger)
   [class*="col-"] {
     float: left;
     padding: 10px;
+  }
+
+  .column_1 {
+    background: #4A84BE;
+    text-align: center;
+    padding: 30px 80px;
+  }
+
+  .column_2 {
+    padding-left: 30px;
   }
 }
 
