--- a/css/style.css
+++ b/css/style.css
@@ -74,15 +74,14 @@ Header
 =====================*/
 header {
   background-color: #DEF1EF;
-  text-align: center;
-  padding: 10px 0;
+  padding: 10px 0 4px;
   box-shadow: 4px 4px 2px 2px rgba(50, 50, 50, 0.75);
   position: fixed;
   width: 100%
 }
 
 .logo {
-  max-width: 60px;
+  max-width: 150px;
 }
 
 /*===================
@@ -178,18 +177,44 @@ body {
   text-align: center;
 }
 
-nav {
-  display: inline-block;
-  width: 100%;
-}
-
 nav>ul {
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 
-nav>ul>li {
-  display: inline-block;
+.navtoggle li .icon {
+  position: absolute;
+  right: 0;
+  top: 2px;
+  font-size: 20px;
+  padding-right: 0;
+}
+
+.navtoggle li:not(:last-child) {
+  display: none;
+}
+
+.navtoggle, .navtoggle.responsive {
+  position: relative;
+}
+
+.navtoggle.responsive li {
+  display: block;
+}
+
+.navtoggle.responsive nav {
+  padding: 24px 0 0;
+}
+
+.navtoggle.responsive li {
+  display: block;
+  padding: 10px 0;
+  border-top: 1px solid rgba(255, 127, 80, 0.5);
+}
+
+.navtoggle.responsive li:last-child {
+  padding: 0 0 10px;
 }
 
 nav>ul>li>a {
@@ -216,7 +241,7 @@ nav>ul>li>a:active {
 }
 
 main {
-  padding-top: 133px;
+  padding-top: 150px;
 }
 
 .stage_even {
@@ -340,6 +365,12 @@ Medium devices (640px and larger)
     margin-top: 4px;
   }
 
+  nav>ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 1em 0;
+  }
+
   main {
     padding-top: 99px;
   }
@@ -366,6 +397,23 @@ Medium devices (640px and larger)
   .column_2 {
     padding-left: 30px;
   }
+
+  .logo {
+    max-width: 60px;
+  }
+
+  nav>ul>li {
+    display: inline-block;
+  }
+
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
+  }
+
+  .navtoggle li:last-child {
+    display: none;
+  }
+}
 }
 
 /* ==============================
@@ -376,6 +424,12 @@ Large devices (1024px or larger)
     width: auto;
     float: right;
     margin-top: 4px;
+  }
+
+  nav>ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 1em 0;
   }
 
   main {
@@ -407,6 +461,22 @@ Large devices (1024px or larger)
 
   .column_2 {
     padding-left: 30px;
+  }
+
+  .logo {
+    max-width: 60px;
+  }
+
+  nav>ul>li {
+    display: inline-block;
+  }
+
+  .navtoggle li:not(:last-child) {
+    display: inline-block;
+  }
+
+  .navtoggle li:last-child {
+    display: none;
   }
 }
 
